--- a/frontend/customerApp/package.json
+++ b/frontend/customerApp/package.json
@@ -7,12 +7,21 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "ts:start": "npx tsc --alwaysStrict --noEmit true --noUncheckedIndexedAccess --watch"
   },
   "dependencies": {
+    "@react-native/new-app-screen": "0.80.0",
+    "@react-navigation/native": "^7.1.13",
+    "@react-navigation/stack": "^7.3.6",
+    "flux": "^4.0.4",
     "react": "19.1.0",
     "react-native": "0.80.0",
-    "@react-native/new-app-screen": "0.80.0"
+    "react-native-gesture-handler": "^2.26.0",
+    "react-native-reanimated": "^3.18.0",
+    "react-native-safe-area-context": "^5.4.1",
+    "react-native-screens": "^4.11.1",
+    "s": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
