frontend-backend auth setup complete

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=backend
+server.port=5050
 spring.datasource.url=jdbc:postgresql://localhost:5432/userdb
 spring.datasource.username=gopal
 spring.datasource.password=gopal2003
