--- a/frontend/customerApp/package.json
+++ b/frontend/customerApp/package.json
@@ -6,11 +6,12 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
-    "start": "react-native start",
+    "start":"react-native start",
     "test": "jest",
     "ts:start": "npx tsc --alwaysStrict --noEmit true --noUncheckedIndexedAccess --watch"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native/new-app-screen": "0.80.0",
     "@react-navigation/native": "^7.1.13",
     "@react-navigation/stack": "^7.3.6",
